# edm2-multi-gpu

./: .gitignore  README.md  pyproject.toml
config/cifar100/: C.yaml  E.yaml
src/edm2_multi_gpu.egg-info/: PKG-INFO  SOURCES.txt
src/edm2multigpu/: __init__.py  datasets.py  train.py
