[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "edm2-multi-gpu"
version = "0.1.0"
description = "Minimal multi-gpu implementation of EDM2: Analyzing and Improving the Training Dynamics of Diffusion Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "tensorboard",
    "Pillow",
    "numpy",
    "tqdm",
    "PyYAML",
    "ema-pytorch",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
exclude = ["config"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
